Fixed gallery wrapping problem for mobile as well

--- a/css/custom.css
+++ b/css/custom.css
@@ -20,7 +20,7 @@ img.profile {
 }
 
 .gallery img {
-	width: 31.9%;
+	width: 31%;
 	margin-right:1%;
 }
 
